--- a/llvm/Makefile
+++ b/llvm/Makefile
@@ -1,32 +1,48 @@
+CC32=clang
+CC64=$(CC32)
+OBJCOPY32=llvm-objcopy
+OBJCOPY64=$(OBJCOPY32)
+CFLAGS=-fpic
+CPPFLAGS=-O2 -Wall -Wextra -nostdlib
+
+PLATFORM_32_BIT=-target arm-freestanding-eabi
+PLATFORM_64_BIT=-target aarch64-none-elf
+
+CPU_P1=-mcpu=arm1176jzf-s
+CPU_P2=-mcpu=cortex-a7
+CPU_P3=-mcpu=cortex-a53
+CPU_P4=-mcpu=cortex-a72
+CPU_P5=-mcpu=cortex-a76
+
 build: compile
-	clang -mcpu=arm1176jzf-s -fpic -target arm-freestanding-eabi -T ../boot/linker.ld -o build/kernel-pi-0-1.elf -O2 -nostdlib build/boot-pi-0-1.o build/kernel-pi-0-1.o
-	llvm-objcopy build/kernel-pi-0-1.elf -O binary build/kernel-pi-0-1.img
+	$(CC32) $(CPU_P1) $(PLATFORM_32_BIT) $(CFLAGS) -T ../boot/linker.ld -o build/kernel-pi-0-1.elf build/boot-pi-0-1.o build/kernel-pi-0-1.o $(CPPFLAGS)
+	$(OBJCOPY32) build/kernel-pi-0-1.elf -O binary build/kernel-pi-0-1.img
 
-	clang -mcpu=cortex-a7 -fpic -target arm-freestanding-eabi -T ../boot/linker.ld -o build/kernel-pi-2.elf -O2 -nostdlib build/boot-pi-2.o build/kernel-pi-2.o
-	llvm-objcopy build/kernel-pi-2.elf -O binary build/kernel-pi-2.img
+	$(CC32) $(CPU_P2) $(PLATFORM_32_BIT) $(CFLAGS) -T ../boot/linker.ld -o build/kernel-pi-2.elf  build/boot-pi-2.o build/kernel-pi-2.o $(CPPFLAGS)
+	$(OBJCOPY32) build/kernel-pi-2.elf -O binary build/kernel-pi-2.img
 
-	clang -mcpu=cortex-a53 -fpic -target aarch64-none-elf -T ../boot/linker.ld -o build/kernel-pi-3.elf -O2 -nostdlib build/aarch64-single-core.o build/kernel-pi-3.o
-	llvm-objcopy build/kernel-pi-3.elf -O binary build/kernel-pi-3.img
+	$(CC64) $(CPU_P3) $(PLATFORM_64_BIT) $(CFLAGS) -T ../boot/linker.ld -o build/kernel-pi-3.elf -nostdlib build/aarch64-single-core.o build/kernel-pi-3.o $(CPPFLAGS)
+	$(OBJCOPY64) build/kernel-pi-3.elf -O binary build/kernel-pi-3.img
 
-	clang -mcpu=cortex-a72 -fpic -target aarch64-none-elf -T ../boot/linker.ld -o build/kernel-pi-4.elf -O2 -nostdlib build/aarch64-single-core.o build/kernel-pi-4.o
-	llvm-objcopy build/kernel-pi-4.elf -O binary build/kernel-pi-4.img
+	$(CC64) $(CPU_P4) $(PLATFORM_64_BIT) $(CFLAGS) -T ../boot/linker.ld -o build/kernel-pi-4.elf -nostdlib build/aarch64-single-core.o build/kernel-pi-4.o $(CPPFLAGS)
+	$(OBJCOPY64) build/kernel-pi-4.elf -O binary build/kernel-pi-4.img
 
-	clang -mcpu=cortex-a76 -fpic -target aarch64-none-elf -T ../boot/linker.ld -o build/kernel-pi-5.elf -O2 -nostdlib build/aarch64-single-core.o build/kernel-pi-5.o
-	llvm-objcopy build/kernel-pi-4.elf -O binary build/kernel-pi-5.img
+	$(CC64) $(CPU_P5) $(PLATFORM_64_BIT) $(CFLAGS) -T ../boot/linker.ld -o build/kernel-pi-5.elf -nostdlib build/aarch64-single-core.o build/kernel-pi-5.o $(CPPFLAGS)
+	$(OBJCOPY64) build/kernel-pi-4.elf -O binary build/kernel-pi-5.img
 
 compile: boot
-	clang -mcpu=arm1176jzf-s -fpic -target arm-freestanding-eabi -std=gnu99 -c ../code/kernel.c -o build/kernel-pi-0-1.o -O2 -Wall -Wextra -DRASPBERRY_MODEL_VERSION=1
-	clang -mcpu=cortex-a7 -fpic -target arm-freestanding-eabi -std=gnu99 -c ../code/kernel.c -o build/kernel-pi-2.o -O2 -Wall -Wextra -DRASPBERRY_MODEL_VERSION=2
-	clang -mcpu=cortex-a53 -fpic -target aarch64-none-elf -std=gnu99 -c ../code/kernel.c -o build/kernel-pi-3.o -O2 -Wall -Wextra -DRASPBERRY_MODEL_VERSION=3
-	clang -mcpu=cortex-a72 -fpic -target aarch64-none-elf -std=gnu99 -c ../code/kernel.c -o build/kernel-pi-4.o -O2 -Wall -Wextra -DRASPBERRY_MODEL_VERSION=4
-	clang -mcpu=cortex-a76 -fpic -target aarch64-none-elf -std=gnu99 -c ../code/kernel.c -o build/kernel-pi-5.o -O2 -Wall -Wextra -DRASPBERRY_MODEL_VERSION=5
+	$(CC32) $(CPU_P1) $(PLATFORM_32_BIT) $(CFLAGS) -c ../code/kernel.c -o build/kernel-pi-0-1.o -DRASPBERRY_MODEL_VERSION=1 $(CPPFLAGS)
+	$(CC32) $(CPU_P2) $(PLATFORM_32_BIT) $(CFLAGS) -c ../code/kernel.c -o build/kernel-pi-2.o -DRASPBERRY_MODEL_VERSION=2 $(CPPFLAGS)
+	$(CC64) $(CPU_P3) $(PLATFORM_64_BIT) $(CFLAGS) -c ../code/kernel.c -o build/kernel-pi-3.o -DRASPBERRY_MODEL_VERSION=3 $(CPPFLAGS)
+	$(CC64) $(CPU_P4) $(PLATFORM_64_BIT) $(CFLAGS) -c ../code/kernel.c -o build/kernel-pi-4.o -DRASPBERRY_MODEL_VERSION=4 $(CPPFLAGS)
+	$(CC64) $(CPU_P5) $(PLATFORM_64_BIT) $(CFLAGS) -c ../code/kernel.c -o build/kernel-pi-5.o -DRASPBERRY_MODEL_VERSION=5 $(CPPFLAGS)
 
 boot: clean
 	mkdir build
-	clang -mcpu=arm1176jzf-s -fpic -target arm-freestanding-eabi -c ../boot/aarch32-multi-core.s -o build/boot-pi-0-1.o
-	clang -mcpu=cortex-a7 -fpic -target arm-freestanding-eabi -c ../boot/aarch32-single-core.s -o build/boot-pi-2.o
-	clang -fpic -target aarch64-none-elf -c ../boot/aarch64-single-core.s -o build/aarch64-single-core.o
-	clang -fpic -target aarch64-none-elf -c ../boot/aarch64-multi-core.s -o build/aarch64-multi-core.o
+	$(CC32) $(CPU_P1) $(PLATFORM_32_BIT) $(CFLAGS) -c ../boot/aarch32-multi-core.s -o build/boot-pi-0-1.o
+	$(CC32) $(CPU_P2) $(PLATFORM_32_BIT) $(CFLAGS) -c ../boot/aarch32-single-core.s -o build/boot-pi-2.o
+	$(CC64) $(PLATFORM_64_BIT) $(CFLAGS) -c ../boot/aarch64-single-core.s -o build/aarch64-single-core.o
+	$(CC64) $(PLATFORM_64_BIT) $(CFLAGS) -c ../boot/aarch64-multi-core.s -o build/aarch64-multi-core.o
 
 clean:
 	rm -rf build
